# small-test-demo

./: .gitignore  17-loop-frame-2.html  17-loop-frame.html  attck-images.html  cert.pem  crypto-function.html  csr.pem  dev-tool.html  ffmpeg.html  fingerprint.html  frozen.html  index0.html  index1.html  index2.html  index2.js  index3.js  input.js  key.pem  liveness.html  liveness2.html  new-function.html  obs.html  opencv.html  orientation.html  package-lock.json  package.json  readme.md  sandbox.html  tamper-detect.html
assemblyscript-demo/: 1.md  index.html  package-lock.json  package.json  result-debug.js  wasm2js.js
assemblyscript-demo/assembly/: index.js  index.ts  index1.ts  tsconfig.json
assemblyscript-demo/tests/: index.js
ast-function/: ast-common.js  ast-obj-functions.js  ast-single-function.js  ast.js  common.xx.js  index.js
build-wasm-example/: CMakeCache.txt  Makefile  cmake_install.cmake
deal-img/: 1.md  a.py  b2.js  base64-1.py  opencv.py  readmme.md  test.js
js-wasm/: demo.js
my-vue-app/: index.html  package-lock.json  package.json
my-vue-app/src/: App.vue  event.ts
test-wasm/: Cargo.toml
test-wasm/src/: lib.rs  main.js  main.rs
wasms/: 1.md  debug-1.wasm  edit.js  index.ts  insert.js  release-1.wasm  release.wasm  table-new-1.wasm  table-new-1.wat  table-old.wasm  table-w.wasm  table-w.wat  table.wasabi.js  table.wat  wasm.html
