[package]
name = "test-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Window", "MediaStream", "MediaStreamConstraints", "Navigator", "MediaDevices", "Permissions"] }
wasmedge_quickjs = "0.2.0"
